# tensorrt-llm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  step.md  step_0_run_docker.sh  step_1_download_model.sh  step_2_transport.sh  step_3_build_engine.sh  step_4_verify_engine.sh  step_5_check_cpp.sh  step_6_generate_cmake.sh  step_7_check_runtime.sh  step_8_convert_int8.sh  step_9_build_engine_int8.sh
patches/: jsoncpp-cxx17.patch
src/: infer.cpp  server.cpp
test/: client.sh  index.html
